css/main.css
/* natural box layout model, allowing overrides */
html { box-sizing: border-box; }
*, *::before, *::after { box-sizing: inherit; }


/* override and set custom defaults */
* {
  margin: 0;
  padding: 0;
}

* {
  --indigo: #6201ff;
  /* --green: #004a21;
  --green-shadow: #001f0d; */
  /* --green: #08A045;
  --green-shadow: #055927; */
  --green: #06632c;
  --green-shadow: #033d1a;
  --red: #ff0022;
  --blue: #48acf0;
  --blue-light: #61b6f0;
  --grey: #919098;
  --grey-light: #dedede;
  --yellow: #f0c808;
}

a { text-decoration: none; }
a:hover { text-decoration: underline; }


.leaf {
  position: absolute;
  background: var(--green-shadow);
  border-radius: 75% 10% 75% 0;
  opacity: 0.25;
}
/* add leaf stem */
.leaf::after {
  content: '';
  position: absolute;
  left: 0; bottom: 0;
  height: 150%;
  width: 5%;
  /* background: #040804; */
  /* background: #076e30; */
  background: #022e14;
  transform-origin: bottom left;
  transform: translateX(-75%) rotate(45deg) translateY(-15%);
  border-radius: 30% 30% 50% 50%;
}

.orb {
  position: absolute;
  border-radius: 50%;
  background: var(--yellow);
}

.square {
  position: absolute;
  border-radius: 2vmin;
  background: var(--indigo);
  z-index: -1;
  opacity: 0.05;
}

body {
  font-family: 'Helvetica', 'Arial', sans-serif;
  line-height: 175%;
}
body > * {
  padding: 25px;
}

#loader {
  position: fixed;
  left: 0; top: 0;
  width: 100vw;
  height: 100vh;
  background: var(--green);
  color: white;
  letter-spacing: 1px;
  font-size: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
  transition: 1s opacity ease-in;
}
#loader .leaf, #loader .orb { z-index: -1; }

header {
  position: fixed;
  left: 0; top: 0;
  width: 100%;
  z-index: 100;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: white;
  transition: 0.25s background ease-out,
              0.25s box-shadow ease-out,
              0.25s padding ease-out;
}
header.filled {
  padding: 15px 25px;
  background: var(--green);
  box-shadow: 0 0 15px var(--green-shadow);
}

header span {
  font-size: 24px;
  font-family: 'Pacifico', cursive;
  z-index: 103;
}

header nav {
  position: fixed;
  top: 0; right: 0;
  background: var(--blue);
  border-radius: 0 0 0 50px;
  display: flex;
  flex-direction: column;
  text-align: right;
  padding-top: 78px;  /* height of header */
  z-index: 102;
  transform: translateX(calc(100% + 50px));  /* 50px height of ::after */
  transition: 0.25s transform ease-out,
              0.25s padding ease-out;
}
header nav::before {
  content: '';
  position: absolute;
  left: 0; top: 0;
  width: 100%;
  height: 78px;  /* height of header */
  background: var(--blue-light);
  transition: 0.25s height ease-out;
}
header.filled nav {
  padding-top: 58px;  /* height of header */
}
header.filled nav::before {
  height: 58px;  /* height of header */
}
header nav::after {
  content: '';
  position: absolute;
  left: 0; top: 0;
  transform: translateX(-100%);
  width: 100px; height: 100px;
  border-radius: 50%;
  box-shadow: 50px -50px 0 var(--blue-light);
  z-index: -1;
}
header nav.active { transform: translateX(0); }
header nav a {
  color: white;
  padding: 10px 25px;
  display: block;
  transition: 0.15s background ease-out;
}
header nav a:hover {
  background: var(--blue-light);
}
header nav a:last-child {
  border-radius: 0 0 0 50px;
}

#header-bg {
  position: fixed;
  left: 0; top: 0;
  width: 100%;
  height: 100vh;
  background: #140037;
  z-index: 101;
  transform: translateY(-100%);
  opacity: 0;
  transition: 0.25s opacity ease-out;
}
#header-bg.active {
  opacity: 1;
  transform: translateY(0);
}
/* make orbs (clones from intro generation) look like stars */
#header-bg .orb {
  background: var(--grey-light);
  transform: scale(0.5);
}

.nav-toggle {
  position: relative;
  cursor: pointer;
  width: 30px;
  height: 25px;
  transition: 0.25s transform ease-in-out;
  z-index: 103;
}
.nav-toggle.active {
  transform: rotate(-90deg);
}

.nav-toggle span {
  background-color: white;
  border-radius: 2px;
  content: '';
  display: block;
  width: 100%;
  height: 4px;
}

.nav-toggle span:nth-child(1) {
  animation: out-top 0.5s ease-in-out;
}
.nav-toggle span:nth-child(2) {
  margin: 5px 0;
  animation: out-mid 0.5s ease-in-out;
}
.nav-toggle span:nth-child(3) {
  animation: out-btm 0.5s ease-in-out;
}

.nav-toggle.active span:nth-child(1) {
  animation: in-top 0.5s ease-in-out forwards;
}
.nav-toggle.active span:nth-child(2) {
  animation: in-mid 0.5s ease-in-out forwards;
}
.nav-toggle.active span:nth-child(3) {
  animation: in-btm 0.5s ease-in-out forwards;
}

/* to hamburger */
@keyframes out-top {
  0% { transform: translateY(9px) rotate(-135deg); }
  50% { transform: translateY(9px) rotate(0); }
  100% { transform: translateY(0) rotate(0); }
}
@keyframes out-mid {
  0% { transform: rotate(-45deg); }
  50% { transform: rotate(0); }
}
@keyframes out-btm {
  0% { transform: translateY(-9px) rotate(-135deg); }
  50% { transform: translateY(-9px) rotate(0); }
  100% { transform: translateY(0) rotate(0); }
}

/* to x btn */
@keyframes in-top {
  0% { transform: translateY(0) rotate(0); }
  50% { transform: translateY(9px) rotate(0); }
  100% { transform: translateY(9px) rotate(-135deg); }
}
@keyframes in-mid {
  50% { transform: rotate(0); }
  100% { transform: rotate(-45deg); }
}
@keyframes in-btm {
  0% { transform: translateY(0) rotate(0); }
  50% { transform: translateY(-9px) rotate(0); }
  100% { transform: translateY(-9px) rotate(-135deg); }
}


#intro {
  position: relative;
  height: 105vh;
  padding-top: 78px;  /* height of header */
  padding-bottom: calc(5vh + 25px);
  background: var(--green);
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100vh);
}
/* ... */

